test/errors/type/str/rep1.yasl
mt.lookup('', .rep)('1', true)
